@@ -83,104 +83,104 @@ FT_BEGIN_HEADER
     AF_BLUE_STRING_ARMENIAN_CAPITAL_TOP = 36,
     AF_BLUE_STRING_ARMENIAN_CAPITAL_BOTTOM = 60,
     AF_BLUE_STRING_ARMENIAN_SMALL_ASCENDER = 84,
-    AF_BLUE_STRING_ARMENIAN_SMALL_TOP = 108,
-    AF_BLUE_STRING_ARMENIAN_SMALL_BOTTOM = 132,
-    AF_BLUE_STRING_ARMENIAN_SMALL_DESCENDER = 156,
-    AF_BLUE_STRING_BENGALI_BASE = 180,
-    AF_BLUE_STRING_BENGALI_TOP = 212,
-    AF_BLUE_STRING_BENGALI_HEAD = 240,
-    AF_BLUE_STRING_CHEROKEE_CAPITAL = 272,
-    AF_BLUE_STRING_CHEROKEE_SMALL_ASCENDER = 304,
-    AF_BLUE_STRING_CHEROKEE_SMALL = 336,
-    AF_BLUE_STRING_CHEROKEE_SMALL_DESCENDER = 368,
-    AF_BLUE_STRING_CYRILLIC_CAPITAL_TOP = 384,
-    AF_BLUE_STRING_CYRILLIC_CAPITAL_BOTTOM = 408,
-    AF_BLUE_STRING_CYRILLIC_SMALL = 432,
-    AF_BLUE_STRING_CYRILLIC_SMALL_DESCENDER = 456,
-    AF_BLUE_STRING_DEVANAGARI_BASE = 465,
-    AF_BLUE_STRING_DEVANAGARI_TOP = 497,
-    AF_BLUE_STRING_DEVANAGARI_HEAD = 529,
-    AF_BLUE_STRING_DEVANAGARI_BOTTOM = 561,
-    AF_BLUE_STRING_ETHIOPIC_TOP = 569,
-    AF_BLUE_STRING_ETHIOPIC_BOTTOM = 601,
-    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_TOP = 633,
-    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_BOTTOM = 665,
-    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_ASCENDER = 697,
-    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_DESCENDER = 729,
-    AF_BLUE_STRING_GEORGIAN_ASOMTAVRULI_TOP = 761,
-    AF_BLUE_STRING_GEORGIAN_ASOMTAVRULI_BOTTOM = 793,
-    AF_BLUE_STRING_GEORGIAN_NUSKHURI_TOP = 825,
-    AF_BLUE_STRING_GEORGIAN_NUSKHURI_BOTTOM = 857,
-    AF_BLUE_STRING_GEORGIAN_NUSKHURI_ASCENDER = 889,
-    AF_BLUE_STRING_GEORGIAN_NUSKHURI_DESCENDER = 921,
-    AF_BLUE_STRING_GREEK_CAPITAL_TOP = 953,
-    AF_BLUE_STRING_GREEK_CAPITAL_BOTTOM = 974,
-    AF_BLUE_STRING_GREEK_SMALL_BETA_TOP = 992,
-    AF_BLUE_STRING_GREEK_SMALL = 1010,
-    AF_BLUE_STRING_GREEK_SMALL_DESCENDER = 1034,
-    AF_BLUE_STRING_GUJARATI_TOP = 1058,
-    AF_BLUE_STRING_GUJARATI_BOTTOM = 1090,
-    AF_BLUE_STRING_GUJARATI_ASCENDER = 1122,
-    AF_BLUE_STRING_GUJARATI_DESCENDER = 1172,
-    AF_BLUE_STRING_GUJARATI_DIGIT_TOP = 1205,
-    AF_BLUE_STRING_GURMUKHI_BASE = 1225,
-    AF_BLUE_STRING_GURMUKHI_HEAD = 1257,
-    AF_BLUE_STRING_GURMUKHI_TOP = 1289,
-    AF_BLUE_STRING_GURMUKHI_BOTTOM = 1321,
-    AF_BLUE_STRING_GURMUKHI_DIGIT_TOP = 1353,
-    AF_BLUE_STRING_HEBREW_TOP = 1373,
-    AF_BLUE_STRING_HEBREW_BOTTOM = 1397,
-    AF_BLUE_STRING_HEBREW_DESCENDER = 1415,
-    AF_BLUE_STRING_KANNADA_TOP = 1430,
-    AF_BLUE_STRING_KANNADA_BOTTOM = 1474,
-    AF_BLUE_STRING_KHMER_TOP = 1506,
-    AF_BLUE_STRING_KHMER_SUBSCRIPT_TOP = 1530,
-    AF_BLUE_STRING_KHMER_BOTTOM = 1570,
-    AF_BLUE_STRING_KHMER_DESCENDER = 1602,
-    AF_BLUE_STRING_KHMER_LARGE_DESCENDER = 1636,
-    AF_BLUE_STRING_KHMER_SYMBOLS_WAXING_TOP = 1723,
-    AF_BLUE_STRING_KHMER_SYMBOLS_WANING_BOTTOM = 1731,
-    AF_BLUE_STRING_LAO_TOP = 1739,
-    AF_BLUE_STRING_LAO_BOTTOM = 1771,
-    AF_BLUE_STRING_LAO_ASCENDER = 1803,
-    AF_BLUE_STRING_LAO_LARGE_ASCENDER = 1819,
-    AF_BLUE_STRING_LAO_DESCENDER = 1831,
-    AF_BLUE_STRING_LATIN_CAPITAL_TOP = 1855,
-    AF_BLUE_STRING_LATIN_CAPITAL_BOTTOM = 1871,
-    AF_BLUE_STRING_LATIN_SMALL_F_TOP = 1887,
-    AF_BLUE_STRING_LATIN_SMALL = 1901,
-    AF_BLUE_STRING_LATIN_SMALL_DESCENDER = 1915,
-    AF_BLUE_STRING_LATIN_SUBS_CAPITAL_TOP = 1925,
-    AF_BLUE_STRING_LATIN_SUBS_CAPITAL_BOTTOM = 1945,
-    AF_BLUE_STRING_LATIN_SUBS_SMALL_F_TOP = 1965,
-    AF_BLUE_STRING_LATIN_SUBS_SMALL = 1985,
-    AF_BLUE_STRING_LATIN_SUBS_SMALL_DESCENDER = 2021,
-    AF_BLUE_STRING_LATIN_SUPS_CAPITAL_TOP = 2041,
-    AF_BLUE_STRING_LATIN_SUPS_CAPITAL_BOTTOM = 2072,
-    AF_BLUE_STRING_LATIN_SUPS_SMALL_F_TOP = 2101,
-    AF_BLUE_STRING_LATIN_SUPS_SMALL = 2127,
-    AF_BLUE_STRING_LATIN_SUPS_SMALL_DESCENDER = 2152,
-    AF_BLUE_STRING_MALAYALAM_TOP = 2163,
-    AF_BLUE_STRING_MALAYALAM_BOTTOM = 2207,
-    AF_BLUE_STRING_MYANMAR_TOP = 2239,
-    AF_BLUE_STRING_MYANMAR_BOTTOM = 2271,
-    AF_BLUE_STRING_MYANMAR_ASCENDER = 2303,
-    AF_BLUE_STRING_MYANMAR_DESCENDER = 2331,
-    AF_BLUE_STRING_SINHALA_TOP = 2363,
-    AF_BLUE_STRING_SINHALA_BOTTOM = 2395,
-    AF_BLUE_STRING_SINHALA_DESCENDER = 2427,
-    AF_BLUE_STRING_TAMIL_TOP = 2471,
-    AF_BLUE_STRING_TAMIL_BOTTOM = 2503,
-    AF_BLUE_STRING_TELUGU_TOP = 2535,
-    AF_BLUE_STRING_TELUGU_BOTTOM = 2563,
-    AF_BLUE_STRING_THAI_TOP = 2591,
-    AF_BLUE_STRING_THAI_BOTTOM = 2615,
-    AF_BLUE_STRING_THAI_ASCENDER = 2643,
-    AF_BLUE_STRING_THAI_LARGE_ASCENDER = 2655,
-    AF_BLUE_STRING_THAI_DESCENDER = 2667,
-    AF_BLUE_STRING_THAI_LARGE_DESCENDER = 2683,
-    AF_BLUE_STRING_THAI_DIGIT_TOP = 2691,
-    af_blue_1_1 = 2702,
+    AF_BLUE_STRING_ARMENIAN_SMALL_TOP = 105,
+    AF_BLUE_STRING_ARMENIAN_SMALL_BOTTOM = 129,
+    AF_BLUE_STRING_ARMENIAN_SMALL_DESCENDER = 153,
+    AF_BLUE_STRING_BENGALI_BASE = 177,
+    AF_BLUE_STRING_BENGALI_TOP = 209,
+    AF_BLUE_STRING_BENGALI_HEAD = 237,
+    AF_BLUE_STRING_CHEROKEE_CAPITAL = 269,
+    AF_BLUE_STRING_CHEROKEE_SMALL_ASCENDER = 301,
+    AF_BLUE_STRING_CHEROKEE_SMALL = 333,
+    AF_BLUE_STRING_CHEROKEE_SMALL_DESCENDER = 365,
+    AF_BLUE_STRING_CYRILLIC_CAPITAL_TOP = 381,
+    AF_BLUE_STRING_CYRILLIC_CAPITAL_BOTTOM = 405,
+    AF_BLUE_STRING_CYRILLIC_SMALL = 429,
+    AF_BLUE_STRING_CYRILLIC_SMALL_DESCENDER = 453,
+    AF_BLUE_STRING_DEVANAGARI_BASE = 462,
+    AF_BLUE_STRING_DEVANAGARI_TOP = 494,
+    AF_BLUE_STRING_DEVANAGARI_HEAD = 526,
+    AF_BLUE_STRING_DEVANAGARI_BOTTOM = 558,
+    AF_BLUE_STRING_ETHIOPIC_TOP = 566,
+    AF_BLUE_STRING_ETHIOPIC_BOTTOM = 598,
+    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_TOP = 630,
+    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_BOTTOM = 662,
+    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_ASCENDER = 694,
+    AF_BLUE_STRING_GEORGIAN_MKHEDRULI_DESCENDER = 726,
+    AF_BLUE_STRING_GEORGIAN_ASOMTAVRULI_TOP = 758,
+    AF_BLUE_STRING_GEORGIAN_ASOMTAVRULI_BOTTOM = 790,
+    AF_BLUE_STRING_GEORGIAN_NUSKHURI_TOP = 822,
+    AF_BLUE_STRING_GEORGIAN_NUSKHURI_BOTTOM = 854,
+    AF_BLUE_STRING_GEORGIAN_NUSKHURI_ASCENDER = 886,
+    AF_BLUE_STRING_GEORGIAN_NUSKHURI_DESCENDER = 918,
+    AF_BLUE_STRING_GREEK_CAPITAL_TOP = 950,
+    AF_BLUE_STRING_GREEK_CAPITAL_BOTTOM = 971,
+    AF_BLUE_STRING_GREEK_SMALL_BETA_TOP = 989,
+    AF_BLUE_STRING_GREEK_SMALL = 1007,
+    AF_BLUE_STRING_GREEK_SMALL_DESCENDER = 1031,
+    AF_BLUE_STRING_GUJARATI_TOP = 1055,
+    AF_BLUE_STRING_GUJARATI_BOTTOM = 1087,
+    AF_BLUE_STRING_GUJARATI_ASCENDER = 1119,
+    AF_BLUE_STRING_GUJARATI_DESCENDER = 1169,
+    AF_BLUE_STRING_GUJARATI_DIGIT_TOP = 1202,
+    AF_BLUE_STRING_GURMUKHI_BASE = 1222,
+    AF_BLUE_STRING_GURMUKHI_HEAD = 1254,
+    AF_BLUE_STRING_GURMUKHI_TOP = 1286,
+    AF_BLUE_STRING_GURMUKHI_BOTTOM = 1318,
+    AF_BLUE_STRING_GURMUKHI_DIGIT_TOP = 1350,
+    AF_BLUE_STRING_HEBREW_TOP = 1370,
+    AF_BLUE_STRING_HEBREW_BOTTOM = 1394,
+    AF_BLUE_STRING_HEBREW_DESCENDER = 1412,
+    AF_BLUE_STRING_KANNADA_TOP = 1427,
+    AF_BLUE_STRING_KANNADA_BOTTOM = 1471,
+    AF_BLUE_STRING_KHMER_TOP = 1503,
+    AF_BLUE_STRING_KHMER_SUBSCRIPT_TOP = 1527,
+    AF_BLUE_STRING_KHMER_BOTTOM = 1567,
+    AF_BLUE_STRING_KHMER_DESCENDER = 1599,
+    AF_BLUE_STRING_KHMER_LARGE_DESCENDER = 1633,
+    AF_BLUE_STRING_KHMER_SYMBOLS_WAXING_TOP = 1720,
+    AF_BLUE_STRING_KHMER_SYMBOLS_WANING_BOTTOM = 1728,
+    AF_BLUE_STRING_LAO_TOP = 1736,
+    AF_BLUE_STRING_LAO_BOTTOM = 1768,
+    AF_BLUE_STRING_LAO_ASCENDER = 1800,
+    AF_BLUE_STRING_LAO_LARGE_ASCENDER = 1816,
+    AF_BLUE_STRING_LAO_DESCENDER = 1828,
+    AF_BLUE_STRING_LATIN_CAPITAL_TOP = 1852,
+    AF_BLUE_STRING_LATIN_CAPITAL_BOTTOM = 1868,
+    AF_BLUE_STRING_LATIN_SMALL_F_TOP = 1884,
+    AF_BLUE_STRING_LATIN_SMALL = 1898,
+    AF_BLUE_STRING_LATIN_SMALL_DESCENDER = 1912,
+    AF_BLUE_STRING_LATIN_SUBS_CAPITAL_TOP = 1922,
+    AF_BLUE_STRING_LATIN_SUBS_CAPITAL_BOTTOM = 1942,
+    AF_BLUE_STRING_LATIN_SUBS_SMALL_F_TOP = 1962,
+    AF_BLUE_STRING_LATIN_SUBS_SMALL = 1982,
+    AF_BLUE_STRING_LATIN_SUBS_SMALL_DESCENDER = 2018,
+    AF_BLUE_STRING_LATIN_SUPS_CAPITAL_TOP = 2038,
+    AF_BLUE_STRING_LATIN_SUPS_CAPITAL_BOTTOM = 2069,
+    AF_BLUE_STRING_LATIN_SUPS_SMALL_F_TOP = 2098,
+    AF_BLUE_STRING_LATIN_SUPS_SMALL = 2124,
+    AF_BLUE_STRING_LATIN_SUPS_SMALL_DESCENDER = 2149,
+    AF_BLUE_STRING_MALAYALAM_TOP = 2160,
+    AF_BLUE_STRING_MALAYALAM_BOTTOM = 2204,
+    AF_BLUE_STRING_MYANMAR_TOP = 2236,
+    AF_BLUE_STRING_MYANMAR_BOTTOM = 2268,
+    AF_BLUE_STRING_MYANMAR_ASCENDER = 2300,
+    AF_BLUE_STRING_MYANMAR_DESCENDER = 2328,
+    AF_BLUE_STRING_SINHALA_TOP = 2360,
+    AF_BLUE_STRING_SINHALA_BOTTOM = 2392,
+    AF_BLUE_STRING_SINHALA_DESCENDER = 2424,
+    AF_BLUE_STRING_TAMIL_TOP = 2468,
+    AF_BLUE_STRING_TAMIL_BOTTOM = 2500,
+    AF_BLUE_STRING_TELUGU_TOP = 2532,
+    AF_BLUE_STRING_TELUGU_BOTTOM = 2560,
+    AF_BLUE_STRING_THAI_TOP = 2588,
+    AF_BLUE_STRING_THAI_BOTTOM = 2612,
+    AF_BLUE_STRING_THAI_ASCENDER = 2640,
+    AF_BLUE_STRING_THAI_LARGE_ASCENDER = 2652,
+    AF_BLUE_STRING_THAI_DESCENDER = 2664,
+    AF_BLUE_STRING_THAI_LARGE_DESCENDER = 2680,
+    AF_BLUE_STRING_THAI_DIGIT_TOP = 2688,
+    af_blue_1_1 = 2699,
 #ifdef AF_CONFIG_OPTION_CJK
     AF_BLUE_STRING_CJK_TOP = af_blue_1_1 + 1,
     AF_BLUE_STRING_CJK_BOTTOM = af_blue_1_1 + 203,
